--- a/Collections/tsconfig.json
+++ b/Collections/tsconfig.json
@@ -15,9 +15,9 @@
     // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
     "sourceMap": true,                     /* Generates corresponding '.map' file. */
     
-    "outDir": "./js",                        /* Redirect output structure to the directory. */
-    "outFile": "./js/app.js",                       /* Concatenate and emit output to single file. */
-    "rootDir": "./ts-modules",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    // "outDir": "./js",                        /* Redirect output structure to the directory. */
+    // "outFile": "./js/app.js",                       /* Concatenate and emit output to single file. */
+    // "rootDir": "./ts-modules",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
     // "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
     "removeComments": true,
